# game-statistics-client

./: .env.local.template  .gitignore  .prettierignore  next-i18next.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
public/locales/de/: common.json  home.json  match.json
public/locales/en/: common.json  home.json  match.json
src/: .env.local.template
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/dataDragon/models/: champion.d.ts  item.d.ts  skin.d.ts  spell.d.ts
src/api/dataDragon/requests/: getChampion.ts  getChampions.ts  getDataDragonVersions.ts  getItem.ts  getItems.ts
src/api/gameStats/: client.ts
src/api/liveClient/hooks/: useAllLiveClientData.ts
src/api/liveClient/models/: ability.d.ts  championStats.d.ts  event.d.ts  gameData.d.ts  item.d.ts  player.d.ts  rune.d.ts  scores.ts  spell.d.ts
src/api/liveClient/requests/: getAllLiveClientData.ts
src/api/queryClient/: queryClient.ts
src/api/statsApi/requests/: getWinrate.ts
src/components/eventTimeline/: eventTimeline.tsx
src/components/layout/: layout.module.scss  layout.tsx
src/lcu-connector/: getLCUPathFromProcess.ts  parseLockFile.ts  useLCUConnector.ts
src/pages/: _app.tsx  _document.tsx  index.tsx  viz.tsx
src/pages/live/: match.tsx
src/styles/: globals.scss  style.css
src/types/: i18next.d.ts
src/utils/: envVariables.ts  isClient.ts  liveGame.ts
